We actually don't need to install deps

--- a/materials/slides/02-datatable.qmd
+++ b/materials/slides/02-datatable.qmd
@@ -62,7 +62,7 @@ execute:
 
 ## Loading PUMS Data
 
-Preview to next section with Jonathon about `arrow`:
+Preview to next section with Jonathan about `arrow`:
 
 ```{r}
 library(data.table)
