Fix up some names

--- a/materials/activities/03-practice-arrow.qmd
+++ b/materials/activities/03-practice-arrow.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Hands-on practice: Analysis with PUMS Data"
+title: "Hands-on practice: Using parquet, arrow, and duckdb"
 editor: source
 ---
 
